--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     color: white;
     height: 100vh;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 main {
@@ -19,8 +23,8 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 600px;
-    padding: 12% 4% 0% 20%;
+    width: 1000px;
+    padding: 5% 4% 0% 20%;
     gap: 15px;
 }
 
@@ -54,7 +58,7 @@ main {
 img {
     max-width: 300px;
     max-height: 300px;
-    margin: 12% 10% 0px 0px;
+    margin: 5% 10% 0px 0px;
     display: flex;
     align-items: center;
     border-radius: 20%;
